syntax = "proto3";
package proto;
option go_package = "main/proto";

message EchoGetRequest {
    string path_name=1;
    string query_name=2;
}

message EchoPostRequest {
    string path_name=1;
    string query_name=2;
    string body_name=3;
}

message Response {
    string resp=1;
}

service EchoService {
  rpc Get(EchoGetRequest) returns (Response) {
  }
  rpc Post(EchoPostRequest) returns (Response) {
  }
}